# rust-crossplatform-library

./: .gitignore  README.md
android/app/: build.gradle
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
helloPython/: Cargo.toml  pyproject.toml
helloPython/src/: lib.rs
helloweb/: Cargo.toml  LICENSE_MIT
helloweb/src/: lib.rs
ios/ios.xcodeproj/project.xcworkspace/xcuserdata/fdimarh.xcuserdatad/: UserInterfaceState.xcuserstate
python/: main.py
pythonPoetry/: pyproject.toml
server/: Cargo.toml
server/src/: main.rs
web/: index.js  package.json
